tests/expectations/compiler/structs/inline_member_fail.out
Error [EPAR0370017]: Could not parse the implicit value: 1.
    --> compiler-test:8:21
     |
   8 |         let y: u8 = 1;
     |                     ^
